--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,8 @@ dependencies:
   dropdown_search: ^5.0.6
   dropdown_textfield: ^1.0.8
   cloud_firestore: ^4.11.0
+  dropdown_button3: ^3.0.0
+  geocode: ^1.0.3
 
 dev_dependencies:
   auto_route_generator: ^7.3.2
