--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,7 +67,8 @@ flutter {
 }
 
 dependencies {
-    implementation 'com.google.android.gms:play-services-maps:18.1.0'
-    implementation 'com.google.firebase:firebase-auth:22.1.2'
-    implementation 'com.google.firebase:firebase-messaging:23.2.1'
+    implementation 'com.google.android.gms:play-services-maps:18.2.0'
+    implementation 'com.google.firebase:firebase-auth:22.2.0'
+    implementation 'com.google.firebase:firebase-messaging:23.3.0'
+    implementation 'com.google.android.gms:play-services-vision:20.1.3'
 }
