--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,10 +69,12 @@ dependencies:
   cloud_firestore: ^4.11.0
   dropdown_button3: ^3.0.0
   geocode: ^1.0.3
+  counter: ^0.2.2
 
 dev_dependencies:
   auto_route_generator: ^7.3.2
   build_runner: ^2.4.6
+  flutter_launcher_icons: ^0.13.1
 
   flutter_test:
     sdk: flutter
@@ -126,3 +128,20 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/LoGo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/images/LoGo.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/images/LoGo.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/images/LoGo.png"
