--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   dropdown_button3: ^3.0.0
   geocode: ^1.0.3
   counter: ^0.2.2
+  url_launcher: ^6.2.1
 
 dev_dependencies:
   auto_route_generator: ^7.3.2
