--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   geocode: ^1.0.3
   counter: ^0.2.2
   url_launcher: ^6.2.1
+  image_picker: ^1.0.4
 
 dev_dependencies:
   auto_route_generator: ^7.3.2
