--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   counter: ^0.2.2
   url_launcher: ^6.2.1
   image_picker: ^1.0.4
+  email_validator: ^2.1.17
 
 dev_dependencies:
   auto_route_generator: ^7.3.2
