--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,9 @@ dependencies:
   url_launcher: ^6.2.1
   image_picker: ^1.0.4
   email_validator: ^2.1.17
+  firebase_storage: ^11.4.1
+  path: ^1.8.3
+  firebase_app_check: ^0.2.1+3
 
 dev_dependencies:
   auto_route_generator: ^7.3.2
